<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fabActionsRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabExecute"
        android:contentDescription="@string/action_run"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="20dp"
        android:src="@drawable/ic_start"
        app:backgroundTint="#00FF19" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabActions"
        android:contentDescription="@string/fab_actions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="88dp"
        android:src="@drawable/ic_settings"
        app:backgroundTint="#FFFFFF" />

    <LinearLayout
        android:id="@+id/fabMiniContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="92dp"
        android:alpha="0"
        android:orientation="horizontal"
        android:visibility="gone"
        tools:alpha="1"
        tools:visibility="visible">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabUndo"
            android:contentDescription="@string/fab_undo"
            style="@style/FabMini"
            android:src="@drawable/ic_undo" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabRedo"
            android:contentDescription="@string/fab_redo"
            style="@style/FabMini"
            android:src="@drawable/ic_redo" />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabSearch"
            android:contentDescription="@string/fab_search"
            style="@style/FabMini"
            android:src="@drawable/ic_search" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabScreenshot"
            android:contentDescription="@string/fab_screenshot"
            style="@style/FabMini"
            android:src="@drawable/ic_screenshot" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabEyedropper"
            android:contentDescription="@string/fab_eyedropper"
            style="@style/FabMini"
            android:src="@drawable/ic_eyedropper" />

    </LinearLayout>

</FrameLayout>