<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.Toolbar
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/topToolbar"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:background="#000000"
    app:contentInsetStart="0dp"
    app:contentInsetEnd="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingHorizontal="0dp">

        <!-- МЕНЮ -->
        <ImageView
            android:id="@+id/btnOptions"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="12dp"
            android:src="@drawable/ic_options"
            android:clickable="true"
            android:tooltipText="@string/toolbar_menu"
            android:contentDescription="@string/toolbar_menu"
            android:background="?attr/selectableItemBackgroundBorderless" />

        <!-- ИМЯ ФАЙЛА -->
        <TextView
            android:id="@+id/txtFileName"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/default_filename"
            android:tooltipText="@string/toolbar_filename"
            android:contentDescription="@string/toolbar_filename"
            android:textColor="#FFFFFF"
            android:textSize="14sp" />

    </LinearLayout>

</androidx.appcompat.widget.Toolbar>
